--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,9 +15,9 @@ pipeline{
         }
         stage("deploy-dev"){
             steps{
-                sshagent(['tomcat-new']) {
+                sshagent(['tomy']) {
                 sh """
-                    scp -o StrictHostKeyChecking=no target/myweb.war  ec2-user@172.31.5.176:/opt/tomcat8/webapps/
+                    scp -o StrictHostKeyChecking=no target/*.war  root@172.31.45.99:/opt/tomcat8/webapps/
                     
                     ssh ec2-user@172.31.5.176 /opt/tomcat8/bin/shutdown.sh
                     
