--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,9 +19,9 @@ pipeline{
                 sh """
                     scp -o StrictHostKeyChecking=no target/*.war  root@172.31.45.99:/opt/tomcat8/webapps/
                     
-                    ssh ec2-user@172.31.5.176 /opt/tomcat8/bin/shutdown.sh
+                    ssh root@172.31.45.99 /opt/tomcat8/bin/shutdown.sh
                     
-                    ssh ec2-user@172.31.5.176 /opt/tomcat8/bin/startup.sh
+                    ssh root@172.31.45.99 /opt/tomcat8/bin/startup.sh
                 
                 """
             }
